--- a/organizer.css
+++ b/organizer.css
@@ -1,11 +1,70 @@
 body{
-    /* background: url("skyPic.jpg"); */
     height: 100vh;
-    position: relative;
+}
+
+/* Link to apps */
+#link-container{
+    background-color: black;
+    width: 370px;
+    height: 50vh;
+    position: absolute;
+    top: 25vh;
+    left: 50px;
+}
+
+#add-link-container{ 
+    background-color: white;
+    width: 350px;
+    border-radius: 20px;
+    padding: 20px 10px;
+    box-shadow: 0 0 3px;
 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-bottom: 20px;
+}
+
+#input-link{
+    flex: 5;
+    margin-right: 10px;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 16px;
+}
+
+#add-link{
+    flex: 1;
+    transition: .3s;
+    background-color: white;
+    color: green;
+    border: 1px solid green;
+    border-radius: 5px;
+}
+
+#add-link:hover{
+    background-color: green;
+    color: white;
+}
+
+.Gmail-btn{
+    width: 50px;
+}
+
+.Gmail-btn-img{
+    width: 30px;
+}
+
+.app{
+    width: 50px;
+}
+
+/* Todo list */
+#todo-container{
+    background-color: black;
+    width: 370px;
+    height: 50vh;
+    position: absolute;
+    top: 25vh;
+    right: 50px;
 }
 
 #add-task-container{ 
@@ -62,15 +121,6 @@ li{
     font-size: 16px;
 }
 
-a{
-    flex: 4;
-    list-style: none;
-    margin: 10px;
-    border-radius: 10px;
-    padding: 5px;
-    font-size: 16px;
-}
-
 .check-button{
     width: 50px;
     transition: .3s;
@@ -99,16 +149,4 @@ a{
 .delete-button:hover{
     background-color: red;
     color: white;
-}
-
-.Gmail-btn{
-    width: 50px;
-}
-
-.Gmail-btn-img{
-    width: 30px;
-}
-
-.app{
-    width: 50px;
 }
