--- a/calendar.css
+++ b/calendar.css
@@ -1,9 +1,9 @@
-body {
+/* body {
     display: flex;
     margin-top: 50px;
     justify-content: center;
     background-color: #FFFCFF;
-  }
+  } */
   button {
     width: 75px;
     cursor: pointer;
@@ -28,6 +28,9 @@ body {
   }
   #container {
     width: 770px;
+    position: absolute;
+    right: 5vh;
+    top: 40vh;
   }
   #weekdays {
     width: 100%;
@@ -119,7 +122,7 @@ body {
     left: 0px;
     z-index: 10;
     width: 100vw;
-    height: 100vh;
+    height: 150vh;
     position: absolute;
     background-color: rgba(0,0,0,0.8);
   }
