--- a/organizer.css
+++ b/organizer.css
@@ -1,5 +1,18 @@
-body{
+/* body{
     height: 100vh;
+    width: 100vw;
+} */
+
+#title{
+    background-color: blue;
+    width: 100vw;
+    height: 10vh;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 10vh;
+    font-size: 24px;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 /* Link to apps */
@@ -8,8 +21,7 @@ body{
     width: 370px;
     height: 50vh;
     position: absolute;
-    top: 25vh;
-    left: 50px;
+    left: 10vw;
 }
 
 #add-link-container{ 
@@ -63,8 +75,7 @@ body{
     width: 370px;
     height: 50vh;
     position: absolute;
-    top: 25vh;
-    right: 50px;
+    right: 10vw;
 }
 
 #add-task-container{ 
