--- a/calendar.css
+++ b/calendar.css
@@ -4,6 +4,7 @@
     justify-content: center;
     background-color: #FFFCFF;
   } */
+
   button {
     width: 75px;
     cursor: pointer;
@@ -13,6 +14,15 @@
     padding: 5px;
     border-radius: 5px;
     color: white;
+  }
+
+  #show-calendar-btn{
+    right: 1vw;
+    position: absolute;
+    cursor: pointer;
+    /* appearance: none; */
+    /* background-color: transparent; */
+    
   }
   
   #header {
@@ -27,10 +37,14 @@
     background-color:#92a1d1;
   }
   #container {
+    display: none;
     width: 770px;
-    position: absolute;
-    right: 5vh;
-    top: 40vh;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 11;
+    background-color: white;
   }
   #weekdays {
     width: 100%;
