--- a/organizer.css
+++ b/organizer.css
@@ -3,6 +3,8 @@
     width: 100vw;
 } */
 
+*{padding:0; margin:0;}
+
 #title{
     background-color: blue;
     width: 100vw;
@@ -13,6 +15,7 @@
     font-size: 24px;
     color: white;
     font-family: 'Courier New', Courier, monospace;
+    margin: 0px;
 }
 
 .input{
@@ -70,16 +73,26 @@
     color: white;
 }
 
-.Gmail-btn{
+.app-img{
     width: 50px;
+    padding: 5px;
+    /* border: 1px solid black; */
 }
 
-.Gmail-btn-img{
-    width: 30px;
-}
+/* .app{
+    width: 80px;
+    height: 50px;
+    background-color: green;
+    border: 1px solid black;
+} */
 
-.app{
-    width: 50px;
+#toggle-delete{
+    flex: 1;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    height: 35px;
+    align-self: center;
 }
 
 /* Todo list */
