--- a/organizer.css
+++ b/organizer.css
@@ -1,8 +1,3 @@
-/* body{
-    height: 100vh;
-    width: 100vw;
-} */
-
 *{padding:0; margin:0;}
 
 #title{
@@ -12,9 +7,10 @@
     text-align: center;
     vertical-align: middle;
     line-height: 10vh;
-    font-size: 24px;
+    font-size: 28px;
     color: white;
     font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
     margin: 0px;
 }
 
@@ -26,13 +22,12 @@
     font-size: 16px;
 }
 
-/* Link to apps */
+/* Apps */
 #link-container{
-    /* background-color: black; */
     width: 370px;
     height: 50vh;
     position: absolute;
-    left: 10vw;
+    left: 5vw;
 }
 
 #add-link-container{ 
@@ -46,13 +41,6 @@
     margin-bottom: 20px;
 }
 
-/* #input-link{
-    flex: 5;
-    margin-right: 10px;
-    border-radius: 10px;
-    padding: 5px;
-    font-size: 16px;
-} */
 #link-input-container{
     flex: 5;
 }
@@ -76,15 +64,8 @@
 .app-img{
     width: 50px;
     padding: 5px;
-    /* border: 1px solid black; */
 }
 
-/* .app{
-    width: 80px;
-    height: 50px;
-    background-color: green;
-    border: 1px solid black;
-} */
 
 #toggle-delete{
     flex: 1;
@@ -95,18 +76,20 @@
     align-self: center;
 }
 
-/* Todo list */
+/* Todo List */
 #todo-container{
-    /* background-color: black; */
-    width: 370px;
+    /* width: 370px; */
+    width: 30vw;
     height: 50vh;
     position: absolute;
-    right: 10vw;
+    right: 20vw;
 }
 
 #add-task-container{ 
     background-color: white;
-    width: 350px;
+    /* width: 350px; */
+    /* width: 30vw; */
+    flex: 5;
     border-radius: 20px;
     padding: 20px 10px;
     box-shadow: 0 0 3px;
@@ -115,13 +98,6 @@
     margin-bottom: 20px;
 }
 
-/* #input-task{
-    flex: 5;
-    margin-right: 10px;
-    border-radius: 10px;
-    padding: 5px;
-    font-size: 16px;
-} */
 
 #add-task{
     flex: 1;
