--- a/organizer.css
+++ b/organizer.css
@@ -1,7 +1,7 @@
 *{padding:0; margin:0;}
 
 #title{
-    background-color: blue;
+    background-color: rgb(11, 175, 230);
     width: 100vw;
     height: 10vh;
     text-align: center;
@@ -11,7 +11,7 @@
     color: white;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    margin: 0px;
+    margin-bottom: 5px;
 }
 
 .input{
